--- a/WebApplication4/ClientApp/src/index.html
+++ b/WebApplication4/ClientApp/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>WebApplication4</title>
+  <title>Denver.UI</title>
   <base href="/" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
